sample-apps/jhipster-microservice/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipster-microservice
  labels:
    app.kubernetes.io/name: jhipster-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jhipster-microservice
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jhipster-microservice
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/nubenetes-dev-apps/jhipster-microservice:2.1.0-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
