sample-apps/jhipster-microservice/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jhipster-microservice
  labels:
    app.kubernetes.io/name: jhipster-microservice
spec:
  ports:
    - port: 8080
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: jhipster-microservice
